@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
Bird <|-- Pigeon
Bird <|-- Penguin

abstract class Bird {
#name: string
#color: string
{abstract}+speak(): void
+fly(): void
}

class Pigeon {
+speak(): void
+eatPizza(): void
}

class Penguin {
+speak(): void
+fly(): void
}

@enduml